--- a/styles/sass/index.scss
+++ b/styles/sass/index.scss
@@ -2,6 +2,7 @@
 
 @import url(../../vendors/fonts.css);
 @import url('https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css');
 
 
 @import './utils/reset';                // убираем лишнее
@@ -41,4 +42,8 @@
 @import './blocks/tabs';
 @import './blocks/moderation';
 @import './blocks/idea-edit';
+@import './blocks/add-idea';
+
+/*вспомогательные*/
+@import './blocks/up';
 
