--- a/styles/sass/blocks/_catalog.scss
+++ b/styles/sass/blocks/_catalog.scss
@@ -3,48 +3,17 @@
   box-sizing: border-box;
   padding: 80px 0;
 
-  .ideas__list {
-    max-width: calc(1440px - 10%);
-    width: 90%;
-    margin: 0 auto;
+  .tabs {
+    width: 100%;
+    margin-top: 0;
   }
 
-  .catalog__list {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-    flex-direction: row;
-    column-gap: $spacer-m;
-    margin-bottom: $spacer-m;
+  .tabs ~ .pagination {
+    margin-bottom: 0;
+  }
+
+  .tabs__links {
     justify-content: center;
-  }
-
-  .catalog__item {
-    flex-shrink: 0;
-    
-    a {
-      @extend %silly-link;
-      @extend %text-circe-18;
-    }
-
-    &:hover {
-      a {
-        color: $primary-color-hovered;
-      }
-    }
-
-    &:active {
-      a {
-        color: $primary-color-onclick;
-      }
-    }
-
-    &.active {
-      a {
-        color: $primary-color-onclick;
-      }
-    }
   }
 
 
