--- a/styles/sass/blocks/_project.scss
+++ b/styles/sass/blocks/_project.scss
@@ -10,9 +10,6 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  border-top: 2px solid $dark-color-default;
-  border-right: 2px solid $dark-color-default;
-
   box-sizing: border-box;
   padding: $spacer-xs $spacer-xs 0 0;
   min-height: 310px;
@@ -47,14 +44,18 @@
     }
   }
 
-  &:hover {
-    border-top: 2px solid $secondary-color-default;
-    border-right: 2px solid $secondary-color-default;
-
+  &.withLine.line:hover {
+    &::before {
+      background-color: $secondary-color-default;
+    }
+    &::after {
+      background-color: $secondary-color-default;
+    }
     .project__title {
       color: $dark-color-hovered;
     }
   }
+
 
 
 }
