--- a/styles/sass/blocks/_timeline.scss
+++ b/styles/sass/blocks/_timeline.scss
@@ -35,7 +35,6 @@
     display: block;
     margin: 0;
     border: 1px solid $primary-color-default;
-    border-radius: 50%;
     background-color: $light-color-default;
     width: 32px;
     height: 32px;
@@ -46,10 +45,11 @@
 
     overflow: hidden;
     img {
-      object-fit: cover;
-      object-position: center;
       width: 100%;
       height: 100%;
+      object-fit: contain;
+      object-position: center;
+
     }
   }
 
