--- a/docs/main.css
+++ b/docs/main.css
@@ -5,9 +5,9 @@
     font-style:  bold;
     font-weight: 900;
     font-display: swap;
-    src: url(fonts\Circe_Bold.woff) format("woff"),
-         url(fonts\Circe_Bold.woff2) format("woff2"),
-         url(fonts\circe_bold.ttf) format("truetype"),
+    src: url(fonts/Circe_Bold.woff) format("woff"),
+         url(fonts/Circe_Bold.woff2) format("woff2"),
+         url(fonts/circe_bold.ttf) format("truetype"),
          /* url("../../fonts/circe_bold.svg") format("svg") */
 }
 
@@ -16,9 +16,9 @@
     font-style:  normal;
     font-weight: 400;
     font-display: swap;
-    src: url(fonts\Circe_Regular.woff) format("woff"),
-         url(fonts\Circe_Regular.woff2) format("woff2"),
-         url(fonts\circe.ttf) format("truetype"),
+    src: url(fonts/Circe_Regular.woff) format("woff"),
+         url(fonts/Circe_Regular.woff2) format("woff2"),
+         url(fonts/circe.ttf) format("truetype"),
          /* url("../../fonts/circe.svg") format("svg") */
 }
 
@@ -27,7 +27,7 @@
     font-style:  italic;
     font-weight: 500;
     font-display: swap;
-    src: url(fonts\Lora-Italic.WOFF) format("woff")
+    src: url(fonts/Lora-Italic.WOFF) format("woff")
 }
   
 @font-face {
@@ -35,7 +35,7 @@
     font-style:  normal;
     font-weight: 400;
     font-display: swap;
-    src: url(fonts\Lora-Regular.WOFF) format("woff")
+    src: url(fonts/Lora-Regular.WOFF) format("woff")
 }
 
 /*настройки карусельки*/
