fix: ссылки до фавиконок, оформить scss для стилизации фанси-карусели, убрать лишние файлы

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,7 +9,7 @@
 @import './utils/root';                 // стили для .page
  
 @import './utils/_animation.scss';      // анимации
-@import './utils/fansy-custom.css';        // настройки fancy-box с основного сайта
+@import './utils/fansy-custom.scss';    // настройки fancy-box с основного сайта
 
 @import './blocks/header';
 @import './blocks/main';
