--- a/src/styles/blocks/_map.scss
+++ b/src/styles/blocks/_map.scss
@@ -12,7 +12,7 @@
   .map__map {
     width: 100%;
     height: 861px;
-    background-image: url(../../images/pic2.png);
+/*     background-image: url(../../images/pic2.png); */
     background-size: cover;
     background-repeat: no-repeat;
 
